--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "budo client/index.js --live -- -t [ sheetify/transform -u sheetify-cssnext ] -t es2020",
+    "dev": "budo client/index.js --live --pushstate -- -t [ sheetify/transform -u sheetify-cssnext ] -t es2020",
     "build": "browserify client/index.js -t [ sheetify/transform -u sheetify-cssnext ] -t es2020 -p [ css-extract -o dist/bundle.css ] | uglifyjs -mc > dist/index.js && cssnano dist/bundle.css dist/bundle.min.css",
     "deploy": "npm run build && surge dist"
   },
