--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "budo client/index.js --live --pushstate -- -t [ sheetify/transform -u sheetify-cssnext ] -t es2020",
     "build": "browserify client/index.js -t [ sheetify/transform -u sheetify-cssnext ] -t es2020 -p [ css-extract -o dist/bundle.css ] | uglifyjs -mc > dist/index.js && cssnano dist/bundle.css dist/bundle.min.css",
+    "disc": "browserify client/index.js --full-paths -t [ sheetify/transform -u sheetify-cssnext ] -t es2020  -p [ css-extract -o dist/bundle.css ] | discify > disc.html",
     "deploy": "npm run build && surge dist"
   },
   "keywords": [],
@@ -33,6 +34,7 @@
     "browserify": "^13.1.0",
     "css-extract": "^1.1.3",
     "cssnano-cli": "^1.0.5",
+    "disc": "^1.3.2",
     "surge": "^0.18.0",
     "uglify-js": "^2.7.3"
   }
