--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-extract": "^1.1.3",
     "cssnano-cli": "^1.0.5",
     "disc": "^1.3.2",
+    "standard": "^8.5.0",
     "surge": "^0.18.0",
     "uglify-js": "^2.7.3"
   }
