--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "observ-varhash": "^1.0.8",
     "sheetify": "^5.1.1",
     "sheetify-cssnext": "^1.0.7",
-    "tachyons": "^4.5.4"
+    "tachyons": "^4.5.4",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "browserify": "^13.1.0",
